--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/bytes": "^5.6.0",
+    "@ethersproject/hash": "^5.6.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.7.5",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1",
-    "web3": "^1.6.0"
+    "web3": "^1.6.0",
+    "web3modal": "^1.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
